@@ -4,6 +4,8 @@
 
 === 1.0.27 ===
 * Implemented TruePeak meter.
+* Implemented ScaledMeterGraph with subsampling option.
+* Several fixes and improvements in RawRingBuffer.
 
 === 1.0.26 ===
 * Updated build scripts.
